[package]
name = "solana-axum-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"
hyper = "1.6.0"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
